--- a/config_1.yaml
+++ b/config_1.yaml
@@ -1,11 +1,37 @@
 modules:
-  - name: "Shuttle"
-    floor: {count: 10, weight: 0.5}
-    cross: {count: 4, weight: 1.983}
-    lift: {cs_link: [1,3], weight: 0.925}
-    rack: {cs_link: [1,2,3,4], weight: 0.805}
-    section: {count: 3, cells_per_section: 3, section_gap: 0.3}
-    cell: {weight: 0.5}
-    recharge_point: {floor: 3, cross: 4, weight: 1.5}
-    enter_point: {floor: 2, cross: 4, weight: 1.5}
-    class: {A: 5, B: 15}
+- name: Shuttle
+  floor:
+    count: 10
+    weight: 0.5
+  cross:
+    count: 4
+    weight: 1.983
+  lift:
+    cs_link:
+    - 1
+    - 2
+    weight: 0.925
+  rack:
+    cs_link:
+    - 1
+    - 2
+    - 3
+    - 4
+    weight: 0.805
+  section:
+    count: 3
+    cells_per_section: 3
+    section_gap: 0.3
+  cell:
+    weight: 0.5
+  recharge_point:
+    floor: 3
+    cross: 4
+    weight: 1.5
+  enter_point:
+    floor: 2
+    cross: 4
+    weight: 1.5
+  class:
+    A: 5
+    B: 15
